log
vi., 22 de abr. de 2022  7:41:43: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:41:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->root = createTreeNode;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
a72a69e
